# portable_component_model

./: .clang-format  .clang-format.yaml  .gitignore  CMakeLists.txt  GHE_main.cpp  LICENSE  README.md  debugging.csv  debugging_excel.xlsx  ouputs.csv  outputs_excel.xlsx  requirements.txt  test.json  ~$outputs_excel.xlsx
.github/workflows/: clang-format-check.yml  cppcheck.yml  linux_build.yml  linux_release.yml  mac_build.yml  mac_release.yml  windows_release.yml
Outputs/: GLHEPro_HourlyOutputs.csv  GLHEPro_TestLoads.csv
energyplus/: EnergyPlus.cc  EnergyPlus.hh  Model.cc  Model.hh  ModelWrapper.cc  ModelWrapper.hh  README.md
energyplus/include/energyplus/: EnergyPlus.hh  ModelWrapper.hh
fmu/: README.md  modelDescription.xml  model_fmu.cpp  model_fmu.hpp  model_fmu_export.hpp
fmu/fmpy_driver/: driver.py
fmu/include/: fmi3FunctionTypes.h  fmi3Functions.h  fmi3PlatformTypes.h
images/: structure.pptx
model/: GHE.cpp  GHE.h  GHE_main.cpp  README.md  README_Ryan.txt  model.cpp  model.h  run_GHE
model/include/: GHE.h
outputs/: debug.csv
simple_GHE/: GHE_main.cpp  GHE_q_inputs.cpp  G_expander_e+.cpp  main.cpp  sndbx.cpp  sndbx2.cpp
standalone/: README.md  main.cpp  main.h  multi.cpp  single.cpp  sndbx.cpp
standalone/inputs/: A-B.json  A-B_out.csv  A.json  C.json  C_out.csv  test.json
test/: GHE.unit.cpp  GHE_multi.unit.cpp  GHE_single.unit.cpp  model.unit.cpp  requirements.txt
test/inputs/: C_Tout.txt  GHESim_MFT.txt  GLHEPro_gheTin.txt  GLHEPro_gheTout.txt  Multi_MFT.txt
